tests/invalid/native_function_with_body.wio
@Native
fn NativeAdd(x: i32, y: i32) -> i32 {
    return x + y;
}

fn Entry() -> i32 {
    return 0;
}
